# pgai-agent-kanban

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  HOW_TO.md  LICENSE  README.md  ROADMAP.md  VERSION  install.sh  kanban.cfg_example  project.cfg_example  projects.cfg_example  requirements-test.txt  requirements.txt  secrets_example  shell-env_example
team/: DIRECTIVES.md  HALT.example  OVERVIEW.md  README.md  SOP.md  TESTING.md  pyproject.toml
team/demos/: README.md
team/demos/chomp-man-demo/: README.md
team/demos/helloworld-demo/: README.md
team/demos/testing-only-demo/: README.md
team/demos/three-bears-demo/: README.md
team/halt_after/: __init__.py  __main__.py
team/pgai_agent_kanban/: __init__.py  env.py
team/pgai_agent_kanban/api/: __init__.py  adapter.py  app.py  board_classifier.py  config.py  dependencies.py  generate_icd.py  main.py  metrics_data.py  reads.py
team/pgai_agent_kanban/cm/: __init__.py  changelog_writer.py  read_state_field.py  write_rc_state.py
team/pgai_agent_kanban/dashboard/: __init__.py  _rejected.py  cron_firings.py  halt_state.py  render_costs.py  (+3 more)
team/pm-agent/: README.md  VERIFICATION-METHODOLOGY.md  aggregate_tokens.py  pm_materialize.py  pm_status.py
team/roles/: CM.md  CODER.md  OVERWATCH.md  PM.md  PO.md  TESTER.md  WRITER.md
team/scripts/: add-project.sh  agent-timing.sh  api-server.sh  audit_coding_standards.sh  capture-checkpoint-baseline.sh  cleanup-stale-artifact-only-branches.sh  close.sh  coder-stale-literal-check.sh  collect-reasoning-traces.sh  cost-report.sh  create-project.sh  cron-suggested.template.txt  delete.sh  export-kanban-config.sh  export-project.sh  generate-icd.sh  halt-after.sh  halt-global.sh  halt.sh  help_presence_exempt.txt  import-kanban-config.sh  import-project.sh  init-project-git-repo.sh  install-crontab.sh  install-pseudocron.sh  intake.sh  kanban-status.sh  lint_api_parity.py  lint_changelog_freshness.py  lint_comment_provenance.py  lint_env_bootstrap.py  lint_help_presence.py  lint_icd_compat.py  lint_icd_freshness.py  lint_lib_function_dedupe.py  lint_orphan_tests.py  lint_python_import_completeness.py  lint_skip_bug_gate.sh  lint_test_anti_patterns.py  lint_upgrade_no_temp_copy_guard.py  (+42 more)
team/tasks/: TASK-CREATION.md
team/templates/: retired-files.txt
team/tests/: DASHBOARD-LAYOUT-TESTS.md  conftest.py
team/verification/: verify-uniform-flag-rejection.md  verify_quarantine_visibility.sh  verify_script_exec_bits.sh
team/workflows/: README.md  SCHEMA.md  release.yaml
(+436 files in other folders)
